@@ -192,7 +192,10 @@ APU_DECLARE(apr_bucket *) apr_bucket_file_make(apr_bucket *b, apr_file_t *fd,
 APU_DECLARE(apr_bucket *) apr_bucket_file_create(apr_file_t *fd,
                                               apr_off_t offset, apr_size_t len)
 {
-    apr_bucket_do_create(apr_bucket_file_make(b, fd, offset, len));
+    apr_bucket *b = (apr_bucket *)calloc(1, sizeof(*b));
+
+    APR_BUCKET_INIT(b);
+    return apr_bucket_file_make(b, fd, offset, len);
 }
 
 APU_DECLARE_DATA const apr_bucket_type_t apr_bucket_type_file = {
