@@ -108,7 +108,10 @@ APU_DECLARE(apr_bucket *) apr_bucket_mmap_make(apr_bucket *b,
 APU_DECLARE(apr_bucket *) apr_bucket_mmap_create(
 		apr_mmap_t *mm, apr_off_t start, apr_size_t length)
 {
-    apr_bucket_do_create(apr_bucket_mmap_make(b, mm, start, length));
+    apr_bucket *b = (apr_bucket *)calloc(1, sizeof(*b));
+
+    APR_BUCKET_INIT(b);
+    return apr_bucket_mmap_make(b, mm, start, length);
 }
 
 APU_DECLARE_DATA const apr_bucket_type_t apr_bucket_type_mmap = {
