@@ -139,7 +139,10 @@ APU_DECLARE(apr_bucket *) apr_bucket_socket_make(apr_bucket *b, apr_socket_t *p)
 
 APU_DECLARE(apr_bucket *) apr_bucket_socket_create(apr_socket_t *p)
 {
-    apr_bucket_do_create(apr_bucket_socket_make(b, p));
+    apr_bucket *b = (apr_bucket *)calloc(1, sizeof(*b));
+
+    APR_BUCKET_INIT(b);
+    return apr_bucket_socket_make(b, p);
 }
 
 APU_DECLARE_DATA const apr_bucket_type_t apr_bucket_type_socket = {
